force-app/main/default/objects/New_Invoice__c/New_Invoice__c.object-meta.xml
<CustomObject>
    <label>New Invoice</label>
    <nameField>
        <label>New Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>