force-app/main/default/objects/New_Invoice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>New Invoices</relationshipLabel>
    <relationshipName>New_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>