force-app/main/default/objects/New_Invoice__c/fields/PDF_Link__c.field-meta.xml
<CustomField>
    <fullName>PDF_Link__c</fullName>
    <label>PDF_Link</label>
    <type>Url</type>
</CustomField>